# mailgun-client

./: .env.example  Cargo.toml  README.md
.github/: FUNDING.yaml
examples/: basic_usage.rs
src/: client.rs  lib.rs
